--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ sonarqube {
 
 repositories {
 	mavenLocal()
+	mavenCentral()
 	maven { url 'https://artifactory.intranet.opt/artifactory/libs-snapshot/' }
 	maven { url 'https://artifactory.intranet.opt/artifactory/libs-release/' }
 }
@@ -61,6 +62,8 @@ configurations.all {
 
 dependencies{
 	compile 'net.logstash.logback:logstash-logback-encoder:4.7'
+	compile 'org.springframework.boot:spring-boot-starter:1.5.6.RELEASE'
+
 }
 
 task createPom {
