--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ configurations.all {
 dependencies {
     compile 'net.logstash.logback:logstash-logback-encoder:4.7'
     compile 'org.springframework.boot:spring-boot-starter:1.5.6.RELEASE'
+    testCompile 'org.springframework.boot:spring-boot-starter-test:1.5.6.RELEASE'
 
 }
 
