--- a/build.gradle
+++ b/build.gradle
@@ -30,12 +30,16 @@ task sourcesJar(type: Jar, dependsOn: classes) {
     from sourceSets.main.allSource
 }
 
+artifacts {
+    archives sourcesJar
+}
+
 javadoc {
     options.charSet = 'UTF-8'
 }
 
 jacoco {
-    toolVersion = '0.7.9'
+    toolVersion = '0.8.0'
 }
 
 sonarqube {
