--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ configurations.all {
 dependencies {
     compile 'net.logstash.logback:logstash-logback-encoder:4.7'
     compile 'org.springframework.boot:spring-boot-starter:1.5.6.RELEASE'
+    compile 'org.openjdk.jol:jol-core:0.10'
     testCompile 'org.springframework.boot:spring-boot-starter-test:1.5.6.RELEASE'
 
 }
