--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,12 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'org.owasp:dependency-check-gradle:2.0.1'
+        classpath 'org.owasp:dependency-check-gradle:6.0.3'
     }
 }
 
 plugins {
-    id "org.sonarqube" version "2.5"
+    id "org.sonarqube" version "2.8"
 }
 
 apply plugin: 'java'
@@ -39,7 +39,7 @@ javadoc {
 }
 
 jacoco {
-    toolVersion = '0.8.0'
+    toolVersion = '0.8.6'
 }
 
 sonarqube {
@@ -65,10 +65,10 @@ configurations.all {
 }
 
 dependencies {
-    compile 'net.logstash.logback:logstash-logback-encoder:5.3'
-    compile 'org.springframework.boot:spring-boot-starter:2.0.8.RELEASE'
-    compile 'org.openjdk.jol:jol-core:0.10'
-    testCompile 'org.springframework.boot:spring-boot-starter-test:2.0.8.RELEASE'
+    implementation 'net.logstash.logback:logstash-logback-encoder:6.4'
+    implementation 'org.springframework.boot:spring-boot-starter:2.3.5.RELEASE'
+    implementation 'org.openjdk.jol:jol-core:0.14'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.3.5.RELEASE'
 }
 
 task createPom {
