--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ updates:
       interval: "daily"
 
   # Maintain dependencies for java
-  - package-ecosystem: "Maven"
+  - package-ecosystem: "maven"
     directory: "/"
     schedule:
       interval: "daily"
