--- a/.github/workflows/maven-build-pull-request.yml
+++ b/.github/workflows/maven-build-pull-request.yml
@@ -21,5 +21,14 @@ jobs:
         with:
           java-version: ${{ matrix.Java }}
           distribution: 'adopt'
+
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
       - name: Build with Maven
         run:  mvn -B verify
