--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -3,7 +3,7 @@
 
 name: Java CI with Maven
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   build:
@@ -18,5 +18,37 @@ jobs:
         with:
           java-version: ${{ matrix.Java }}
           distribution: 'adopt'
+
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
       - name: Build with Maven
-        run:  mvn clean verify
+        run:  mvn -B verify
+
+
+
+  conventional-commits-versionning:
+    needs: [build]
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+    name: Bump version and create release
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install NodeJS
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14.x
+      - name: Install Semantic release and maven-semantic-release plugin
+        run: |
+          npm install -g semantic-release \
+          @conveyal/maven-semantic-release @semantic-release/git \
+          @semantic-release/changelog
+      - name: Run semantic release to bump version and create release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npx semantic-release --skip-maven-deploy
