revert : skip-maven-deploy

--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -51,4 +51,4 @@ jobs:
       - name: Run semantic release to bump version and create release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
+        run: npx semantic-release --skip-maven-deploy
