--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -51,5 +51,7 @@ jobs:
       - name: Run semantic release to bump version and create release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OPT_CI_TOKEN: ${{ secrets.OPT_CI_TOKEN }}
+          OPT_CI_LOGIN: ${{ secrets.OPT_CI_LOGIN }}
         run: npx semantic-release
 
