--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -51,7 +51,17 @@ jobs:
       - name: Run semantic release to bump version and create release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OPT_CI_TOKEN: ${{ secrets.OPT_CI_TOKEN }}
-          OPT_CI_LOGIN: ${{ secrets.OPT_CI_LOGIN }}
-        run: npx semantic-release
+        run: npx semantic-release --skip-maven-deploy
 
+      # publish into github registry (pas de job pour rester sur le même repo potentiellement taggé)
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: '8'
+          distribution: 'adopt'
+          cache: 'maven'
+
+      - name: Publish to GitHub Packages Apache Maven
+        run: mvn --batch-mode deploy
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
