--- a/.releaserc.json
+++ b/.releaserc.json
@@ -7,17 +7,10 @@
     "@conveyal/maven-semantic-release",
     "@semantic-release/github",
     [
-      "@semantic-release/changelog",
-      {
-        "changelogFile": "CHANGELOG.md"
-      }
-    ],
-    [
       "@semantic-release/git",
       {
         "assets": [
-          "pom.xml",
-          "CHANGELOG.md"
+          "pom.xml"
         ],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
