--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -31,7 +31,6 @@ jobs:
         run:  mvn -B verify
 
 
-
   conventional-commits-versionning:
     needs: [build]
     if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
@@ -53,6 +52,13 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release --skip-maven-deploy
 
+
+  publish:
+    needs: [conventional-commits-versionning]
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
       # publish into github registry (pas de job pour rester sur le même repo potentiellement taggé)
       - name: Set up JDK 8
         uses: actions/setup-java@v2
@@ -60,7 +66,6 @@ jobs:
           java-version: '8'
           distribution: 'adopt'
           cache: 'maven'
-
       - name: Publish to GitHub Packages Apache Maven
         run: mvn --batch-mode deploy
         env:
