--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -55,7 +55,7 @@ jobs:
 
   publish:
     needs: [conventional-commits-versionning]
-    if: startsWith(github.ref, 'refs/tags/')
+    if: github.ref == 'refs/tags/*'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
