--- a/.github/workflows/maven-build-pull-request.yml
+++ b/.github/workflows/maven-build-pull-request.yml
@@ -21,14 +21,7 @@ jobs:
         with:
           java-version: ${{ matrix.Java }}
           distribution: 'adopt'
-
-      - name: Cache local Maven repository
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          cache: 'maven'
 
       - name: Build with Maven
         run:  mvn -B verify
