--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -4,8 +4,9 @@
 name: Publish to Github Maven Registry
 
 on:
-  release:
-    types: [created]
+  push:
+    branches: main
+    tags: '*.*.*'
 
 jobs:
   build:
@@ -19,14 +20,7 @@ jobs:
         with:
           java-version: '8'
           distribution: 'adopt'
-
-      - name: Cache local Maven repository
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          cache: 'maven'
 
       - name: Publish to GitHub Packages Apache Maven
         run: mvn --batch-mode deploy
