--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -4,9 +4,8 @@
 name: Publish to Github Maven Registry
 
 on:
-  push:
-    branches: main
-    tags: '*.*.*'
+  release:
+    types: [published, created]
 
 jobs:
   build:
