--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -5,7 +5,7 @@ name: Publish to Github Maven Registry
 
 on:
   release:
-    types: [published, created]
+    types: [published, created, released]
 
 jobs:
   build:
