--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -43,4 +43,4 @@ jobs:
       - name: Run semantic release to bump version and create release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release --skip-maven-deploy
+        run: npx semantic-release
