--- a/.releaserc
+++ b/.releaserc
@@ -4,14 +4,16 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    "@conveyal/maven-semantic-release",
-    "@semantic-release/github",
+    [
+      "@semantic-release/exec",
+      {
+        "prepareCmd": ".github/workflows/maven-deploy.sh ${nextRelease.version}"
+      }
+    ],
     [
       "@semantic-release/git",
       {
-        "assets": [
-          "pom.xml"
-        ],
+        "assets": ["pom.xml"],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ]
