--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -31,16 +31,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: 8
+          distribution: 'adopt'
+          cache: 'maven'
       - name: Install NodeJS
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
       - name: Install Semantic release and maven-semantic-release plugin
         run: |
-         npm install -g semantic-release \
+          npm install -g semantic-release \
           @semantic-release/exec \
-          @semantic-release/git 
+          @semantic-release/git
       - name: Run semantic release to bump version and create release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+       
