--- a/.releaserc
+++ b/.releaserc
@@ -1,21 +1,22 @@
 {
-  "branches": "main",
-  "debug": "false",
-  "plugins": [
-    "@semantic-release/commit-analyzer",
-    "@semantic-release/release-notes-generator",
-    [
-      "@semantic-release/exec",
-      {
-        "prepareCmd": ".github/workflows/maven-deploy.sh ${nextRelease.version}"
-      }
-    ],
-    [
-      "@semantic-release/git",
-      {
-        "assets": ["pom.xml"],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
-      }
-    ]
-  ]
+   "branches": "main",
+   "debug": "false",
+   "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      [
+         "@semantic-release/exec",
+         {
+             "prepareCmd": "mvn -B versions:set -DnewVersion=${nextRelease.version}",
+             "publishCmd": mvn -B deploy -DskipTests && mkdir release && cp target/opt-logging-*.jar release
+         }
+      ],
+      [
+         "@semantic-release/git",
+         {
+            "assets": "pom.xml",
+            "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+         }
+      ]
+   ]
 }
