--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '8', '11', '17' ]
+        java: [ '8','17' ]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK ${{ matrix.Java }}
