--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -46,5 +46,5 @@ jobs:
             @semantic-release/exec
             @semantic-release/git
         env:
-          GITHUB_TOKEN: ${{ secret.OPT_CI_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.OPT_CI_TOKEN }}
        
