--- a/.releaserc
+++ b/.releaserc
@@ -12,6 +12,12 @@
          }
       ],
       [
+               "@semantic-release/github",
+               {
+                  "assets": [ ]
+               }
+            ],
+      [
          "@semantic-release/git",
          {
             "assets": "pom.xml",
