--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -47,5 +47,5 @@ jobs:
             @semantic-release/git
             @semantic-release/github
         env:
-          GITHUB_TOKEN: ${{ secrets.OPT_CI_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
        
