--- a/pom.xml
+++ b/pom.xml
@@ -23,21 +23,21 @@
     </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <!-- Dependencies versions -->
-        <logstash-logback-encoder.version>7.1.1</logstash-logback-encoder.version>
-        <spring-context.version>5.3.19</spring-context.version>
+        <logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
+        <spring-context.version>5.3.22</spring-context.version>
         <jol-core.version>0.16</jol-core.version>
-        <logback-classic.version>1.2.11</logback-classic.version>
-        <junit-jupiter.version>5.8.2</junit-jupiter.version>
-        <spring-boot-starter-test.version>2.6.6</spring-boot-starter-test.version>
+        <logback-classic.version>1.4.3</logback-classic.version>
+        <junit-jupiter.version>5.9.0</junit-jupiter.version>
+        <spring-boot-starter-test.version>2.7.4</spring-boot-starter-test.version>
 
         <!-- Plugins versions -->
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <maven-failsafe-plugin>2.22.2</maven-failsafe-plugin>
         <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
-             
+
         <!-- Sonarcloud analysis -->
         <sonar.organization>opt-nc</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
@@ -105,14 +105,12 @@
 
     <build>
         <plugins>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <release>11</release>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
