--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>11</maven.compiler.release>
+        <java.version>1.8</java.version>
         <!-- Dependencies versions -->
         <logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
         <spring-context.version>5.3.23</spring-context.version>
